--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 docker run --name api_db -e POSTGRES_USER=api -e POSTGRES_PASSWORD=api -p 5432:5432 -d postgres:9.6-alpine
-docker run -p 8081:8081 --link api_db:db -e DATABASE_URL=postgres://api:api@db:5432/api?sslmode=disable --rm sosedoff/pgweb --rm api_db
+docker run -p 8081:8081 --link api_db:db -e DATABASE_URL=postgres://api:api@db:5432/api?sslmode=disable --rm sosedoff/pgweb
